<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Laboratório 7</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cidade">Cidade</string>
    
    <string-array name="estados_array">
        <item>Acre</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>São Paulo</item>
    </string-array>
        <string name="operacao">Operação</string>
        <string name="selecione_um_tipo_de_operacao">Selecione um tipo de operação</string>
        <string name="tipo_de_imovel">Tipo de imóvel</string>
        <string name="selecione_um_tipo_de_imovel">Selecione um tipo de imóvel</string>
        <string name="valor_minimo_0">Valor Mínimo: 0</string>
        <string name="valor_maximo_0">Valor Máximo: 0</string>

</resources>
