<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cidade" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/estados_array" />

        <LinearLayout
            android:id="@+id/tipo_operacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operacao"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/operacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecione_um_tipo_de_operacao" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tipo_imovel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/list_selector_background"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_imovel"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/imovel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecione_um_tipo_de_imovel" />
        </LinearLayout>

        <TextView
            android:id="@+id/labelMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_minimo_0"
            android:textSize="22sp" />

        <SeekBar
            android:id="@+id/seekMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5000" />

        <TextView
            android:id="@+id/labelMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_maximo_0"
            android:textSize="22sp" />

        <SeekBar
            android:id="@+id/seekMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5000" />
    </LinearLayout>

</ScrollView>